Refactored Code to remove warnings