@@ -1,139 +1,139 @@
-/**
+/*
  * To change this generated comment edit the template variable "typecomment":
  * Window>Preferences>Java>Templates.
  * To enable and disable the creation of type comments go to
  * Window>Preferences>Java>Code Generation.
  */
 
-import java.awt.*;
-import java.awt.event.*;
 import javax.swing.*;
+import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 
 public class LaneStatusView implements ActionListener, LaneObserver, PinsetterObserver {
-	private JPanel jp;
+    int laneNum;
+    boolean laneShowing;
+    boolean psShowing;
+    private final JPanel jp;
+    private final JLabel curBowler;
+    private final JLabel pinsDown;
+    private final JButton viewLane;
+    private final JButton viewPinSetter;
+    private final JButton maintenance;
+    private final PinSetterView psv;
+    private final LaneView lv;
+    private final Lane lane;
 
-	private JLabel curBowler;
+    public LaneStatusView(Lane lane, int laneNum) {
+        this.lane = lane;
+        this.laneNum = laneNum;
 
+        laneShowing = false;
+        psShowing = false;
 
-	private JLabel pinsDown;
-	private JButton viewLane;
-	private JButton viewPinSetter;
+        psv = new PinSetterView(laneNum);
+        Pinsetter ps = lane.getPinsetter();
+        ps.subscribe(psv);
 
-	private JButton maintenance;
+        lv = new LaneView(lane, laneNum);
+        lane.subscribe(lv);
 
-	private PinSetterView psv;
-	private LaneView lv;
-	private Lane lane;
-	int laneNum;
+        jp = new JPanel();
+        jp.setLayout(new FlowLayout());
+        JLabel cLabel = new JLabel("Now Bowling: ");
+        curBowler = new JLabel("(no one)");
+        new JLabel("Foul: ");
+        new JLabel(" ");
+        JLabel pdLabel = new JLabel("Pins Down: ");
+        pinsDown = new JLabel("0");
 
-	private boolean laneShowing;
-	boolean psShowing;
+        // Button Panel
+        JPanel buttonPanel = new JPanel();
+        buttonPanel.setLayout(new FlowLayout());
 
-	public LaneStatusView(Lane lane, int laneNum ) {
-		this.lane = lane;
-		this.laneNum = laneNum;
+        new Insets(4, 4, 4, 4);
 
-		laneShowing=false;
-		psShowing=false;
+        viewLane = new JButton("View Lane");
+        JPanel viewLanePanel = new JPanel();
+        viewLanePanel.setLayout(new FlowLayout());
+        viewLane.addActionListener(this);
+        viewLanePanel.add(viewLane);
 
-		psv = new PinSetterView( laneNum );
-		Pinsetter ps = lane.getPinsetter();
-		ps.subscribe(psv);
+        viewPinSetter = new JButton("Pinsetter");
+        JPanel viewPinSetterPanel = new JPanel();
+        viewPinSetterPanel.setLayout(new FlowLayout());
+        viewPinSetter.addActionListener(this);
+        viewPinSetterPanel.add(viewPinSetter);
 
-		lv = new LaneView( lane, laneNum );
-		lane.subscribe(lv);
+        maintenance = new JButton("     ");
+        maintenance.setBackground(Color.GREEN);
+        JPanel maintenancePanel = new JPanel();
+        maintenancePanel.setLayout(new FlowLayout());
+        maintenance.addActionListener(this);
+        maintenancePanel.add(maintenance);
 
-		jp = new JPanel();
-		jp.setLayout(new FlowLayout());
-		JLabel cLabel = new JLabel( "Now Bowling: " );
-		curBowler = new JLabel( "(no one)" );
-		JLabel pdLabel = new JLabel( "Pins Down: " );
-		pinsDown = new JLabel( "0" );
+        viewLane.setEnabled(false);
+        viewPinSetter.setEnabled(false);
 
-		// Button Panel
-		JPanel buttonPanel = new JPanel();
-		buttonPanel.setLayout(new FlowLayout());
+        buttonPanel.add(viewLanePanel);
+        buttonPanel.add(viewPinSetterPanel);
+        buttonPanel.add(maintenancePanel);
 
-		
+        jp.add(cLabel);
+        jp.add(curBowler);
+//		jp.add( fLabel );
+//		jp.add( foul );
+        jp.add(pdLabel);
+        jp.add(pinsDown);
 
-		viewLane = new JButton("View Lane");
-		JPanel viewLanePanel = new JPanel();
-		viewLanePanel.setLayout(new FlowLayout());
-		viewLane.addActionListener(this);
-		viewLanePanel.add(viewLane);
+        jp.add(buttonPanel);
+    }
 
-		viewPinSetter = new JButton("Pinsetter");
-		JPanel viewPinSetterPanel = new JPanel();
-		viewPinSetterPanel.setLayout(new FlowLayout());
-		viewPinSetter.addActionListener(this);
-		viewPinSetterPanel.add(viewPinSetter);
+    public JPanel showLane() {
+        return jp;
+    }
 
-		maintenance = new JButton("     ");
-		maintenance.setBackground( Color.GREEN );
-		JPanel maintenancePanel = new JPanel();
-		maintenancePanel.setLayout(new FlowLayout());
-		maintenance.addActionListener(this);
-		maintenancePanel.add(maintenance);
-
-		viewLane.setEnabled( false );
-		viewPinSetter.setEnabled( false );
-
-		buttonPanel.add(viewLanePanel);
-		buttonPanel.add(viewPinSetterPanel);
-		buttonPanel.add(maintenancePanel);
-
-		jp.add( cLabel );
-		jp.add( curBowler );
-		jp.add( pdLabel );
-		jp.add( pinsDown );
-				jp.add(buttonPanel);
-	}
-
-	public JPanel showLane() {
-		return jp;
-	}
-
-	public void actionPerformed( ActionEvent e ) {
-		if ( lane.isPartyAssigned() && e.getSource().equals(viewPinSetter) ) {
-			if ( !psShowing ) {
-				psv.show();
-				psShowing=true;
-			} else if ( psShowing ) {
-				psv.hide();
-				psShowing=false;
-			}
+    public void actionPerformed(ActionEvent e) {
+        if (lane.isPartyAssigned() && e.getSource().equals(viewPinSetter)) {
+		    if (!psShowing) {
+		        psv.show();
+		        psShowing = true;
+		    } else {
+		        psv.hide();
+		        psShowing = false;
+		    }
 		}
-		if (e.getSource().equals(viewLane) && lane.isPartyAssigned()) { 
-			if ( !laneShowing ) {
-				lv.show();
-				laneShowing=true;
-			} else if ( laneShowing ) {
-				lv.hide();
-				laneShowing=false;
-			}
+        if (e.getSource().equals(viewLane) && lane.isPartyAssigned()) {
+		    if (!laneShowing) {
+		        lv.show();
+		        laneShowing = true;
+		    } else {
+		        lv.hide();
+		        laneShowing = false;
+		    }
 		}
-		if (e.getSource().equals(maintenance) && lane.isPartyAssigned()) {
-			lane.unPauseGame();
-			maintenance.setBackground( Color.GREEN );
+        if (e.getSource().equals(maintenance) && lane.isPartyAssigned()) {
+		    lane.unPauseGame();
+		    maintenance.setBackground(Color.GREEN);
 		}
-	}
+    }
 
-	public void receiveLaneEvent(LaneEvent le) {
-		curBowler.setText( ( (Bowler)le.getBowler()).getNickName() );
-		if ( le.isMechanicalProblem() ) {
-			maintenance.setBackground( Color.RED );
-		}	
-		if ( !lane.isPartyAssigned() ) {
-			viewLane.setEnabled( false );
-			viewPinSetter.setEnabled( false );
-		} else {
-			viewLane.setEnabled( true );
-			viewPinSetter.setEnabled( true );
-		}
-	}
+    public void receiveLaneEvent(LaneEvent le) {
+        curBowler.setText(le.getBowler().getNickName());
+        if (le.isMechanicalProblem()) {
+            maintenance.setBackground(Color.RED);
+        }
+        if (!lane.isPartyAssigned()) {
+            viewLane.setEnabled(false);
+            viewPinSetter.setEnabled(false);
+        } else {
+            viewLane.setEnabled(true);
+            viewPinSetter.setEnabled(true);
+        }
+    }
 
-	@SuppressWarnings("deprecation")
-	public void receivePinsetterEvent(PinsetterEvent pe) {
-		pinsDown.setText( new Integer(pe.totalPinsDown()).toString() );
-			}
+    public void receivePinsetterEvent(PinsetterEvent pe) {
+        pinsDown.setText(Integer.valueOf(pe.totalPinsDown()).toString());
+//		foul.setText( ( new Boolean(pe.isFoulCommited()) ).toString() );
+    }
 }
